<resources>
    <string name="app_name">Trình khởi chạy DMS</string>
    <string name="check_in">Ghi nhận vào</string>
    <string name="check_out">Ghi nhận ra</string>
    <string name="setting">Cài đặt</string>
    <string name="notice">Thông báo</string>
    <string name="position">Vị trí</string>
    <string name="get_location">Lấy vị trí</string>
    <string name="take_picture">Chụp hình</string>
    <string name="save_send">Lưu và gửi liền</string>
    <string name="view_contact">Xem liên lạc</string>
    <string name="edit_number_before_call">Sửa số trước khi gọi</string>
    <string name="copy_call_number">Sao chép liên lạc</string>
    <string name="reject_call">Chặn liên lạc</string>
    <string name="remove_reject_call">Bỏ chặn liên lạc</string>
    <string name="delete_call_log">Xóa nhật ký cuộc gọi này</string>
    <string name="delete_all_log_this_number">Xóa hết nhật ký cuộc gọi bởi số này</string>
    <string name="add_to_contact">Thêm liên lạc</string>
    <string name="enabled">Đã bật</string>
    <string name="disabled">Đã tắt</string>
    <string name="permissionlabel">Trình khởi chạy DMS</string>
    <string name="calllog">Cuộc gọi gần đây</string>
    <string name="home">Màn hình chính</string>
    <string name="app_dms">Ứng dụng DMS</string>
    <string name="hint_username">Tên tài khoản</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="sign_in_title">Màn hình đăng nhập</string>
    <string name="change_pass_title">Màn hình đổi mật khẩu</string>
    <string name="err_msg_name">Nhập tên đăng nhập</string>
    <string name="err_msg_password">Nhập mật khẩu</string>
    <string name="hint_password_old">Nhập mật khẩu cũ</string>
    <string name="hint_password_new">Nhập mật khẩu mới</string>
    <string name="hint_password_new_again">Nhập lại mật khẩu mới</string>
    <string name="change_pass">Đổi mật khẩu</string>
    <string name="err_msg_password_old">Nhập mật khẩu cũ</string>
    <string name="err_msg_password_new">Nhập mật khẩu mới</string>
    <string name="err_msg_password_new_again">Nhập lại mật khẩu mới</string>
    <string name="listorder_title">Danh sách đơn hàng</string>
    <string name="order">Đơn hàng</string>
    <string name="update">Cập nhật</string>
    <string name="notify">Báo cáo</string>
    <string name="no">Không</string>
    <string name="yes">Có</string>
    <string name="accept">Chấp nhận</string>
    <string name="questionexit">Bạn có muốn thoát ứng dụng?</string>
    <string name="money">VNĐ</string>
    <string name="err_msg_password_not_match">Mật khẩu mới không khớp</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="dms_slogan">Công ty TNHH Đầu Tư Phần Mềm Quản Lý DMS 18 Gò Cẩm Đệm, Phường 10, Quận Tân Bình, TP.HCM Điện thoại: (083) 602 8869 Mail: cty.dms@gmail.com</string>
    <string name="rememberLogin">Duy trì đăng nhập</string>
    <string name="sign_in_success">Đăng nhập thành công</string>
    <string name="sign_in_fail">Đăng nhập thất bại</string>
    <string name="change_pass_success">Đổi mật khẩu thành công</string>
    <string name="change_pass_fail">Đổi mật khẩu thất bại</string>
    <string name="title_activity_maps">Bản đồ</string>
    <string name="title_activity_get_location">Bản đồ</string>
    <string name="error_title">Lỗi</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="tagWL">WAKELOCK</string>
    <string name="tagEx">Exception</string>
    <string name="setAlarm">Alarm</string>
    <string name="app_design_name">Thiết kế bởi LTG</string>
    <string name="downline"> \n</string>
    <string name="spaceline">\t▒\t</string>
    <string name="enter_password">Nhập mật khẩu mở khóa</string>
    <string name="hint_search_app">Tìm ứng dụng...</string>
    <string name="list_app">Danh sách ứng dụng</string>
    <string name="alarm_null">Alarm is null</string>
    <string name="sms_location">vnd.android-dir/mms-sms</string>
    <string name="gmail_location">com.google.android.gm</string>
    <string name="phone_location">com.android.contacts</string>
    <string name="customer">Khách hàng</string>
    <string name="log_out">Đăng xuất</string>
    <string name="location_here">Vị trí hiện tại</string>
    <string name="location_wait">Đang lấy vị trí, vui lòng đợi trong giây lát.</string>
    <string name="location_none">Chưa có vị trí</string>
    <string name="location_none_help">Vui lòng nhấn phím V để lấy lại vị trí</string>
    <string name="notify_location">Vui lòng lấy vị trí</string>
    <string name="notify_take_photo">Vui lòng chụp hình</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="full_name">Tên đầy đủ :</string>
    <string name="username">Tên tài khoản :</string>
    <string name="ok">VietDMS</string>
    <string name="notok">Launcher</string>
    <string name="reporting">Đang báo cáo lỗi \n vui lòng chờ ứng dụng khởi động lại</string>
    <string name="device_name">Tên thiết bị</string>
    <string name="unblock">Mở khóa</string>
    <string name="password_fail">Mật khẩu sai</string>
    <string name="staff_list">Danh sách nhân viên</string>
</resources>
