<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:id="@+id/view_listviewlonglick"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtNameContact"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        android:gravity="center_horizontal|center_vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/view_contact"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/txtViewContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/view_contact"
        android:textColor="@android:color/black" />
    <View
        android:background="@color/colorBlue"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:id="@+id/txtEditNumberBeforeCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/edit_number_before_call"
        android:textColor="@android:color/black" />
    <View
        android:background="@color/colorBlue"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:id="@+id/txtCopyCallNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/copy_call_number"
        android:textColor="@android:color/black" />
    <View
        android:background="@color/colorBlue"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:id="@+id/txtRejectCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/reject_call"
        android:textColor="@android:color/black" />
    <View
        android:background="@color/colorBlue"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:id="@+id/txtDeleteCallLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/delete_call_log"
        android:textColor="@android:color/black" />
    <View
        android:background="@color/colorBlue"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:id="@+id/txtDeleteAllCallLogThisNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/delete_all_log_this_number"
        android:textColor="@android:color/black" />
    <View
        android:background="@color/colorBlue"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

</LinearLayout>