<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/centerbg"
    tools:context="info.androidhive.materialtabs.fragments.OneFragment">

    <include
        layout="@layout/layout_checkin"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <include
        layout="@layout/layout_checkout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <include
        layout="@layout/layout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <include
        layout="@layout/layout_change_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <include
        layout="@layout/layout_list_order"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <RelativeLayout
        android:id="@+id/rela_layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--<TextView-->
            <!--android:id="@+id/textTitle"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@drawable/button_drawable"-->
            <!--android:gravity="center_vertical|center_horizontal"-->
            <!--android:text="PHẦN MỀM DMS"-->
            <!--android:textColor="@color/colorBlue"-->
            <!--android:textStyle="bold" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textTitle"
            android:orientation="vertical"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnCheckIn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:alpha="0.8"
                    android:textColor="@drawable/text_drawable"
                    android:background="@drawable/button_drawable"
                    android:drawableTop="@drawable/checkin_btn"
                    android:text="@string/check_in" />

                <Button
                    android:id="@+id/btnCheckOut"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@drawable/text_drawable"
                    android:alpha="0.8"
                    android:background="@drawable/button_drawable"
                    android:drawableTop="@drawable/checkout_btn"
                    android:text="@string/check_out" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnNotify"
                    android:layout_width="0dp"
                    android:textColor="@drawable/text_drawable"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:alpha="0.8"
                    android:background="@drawable/button_drawable"
                    android:drawableTop="@drawable/notice_btn"
                    android:text="@string/notice" />

                <Button
                    android:id="@+id/btnLocation"
                    android:textColor="@drawable/text_drawable"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:alpha="0.8"
                    android:background="@drawable/button_drawable"
                    android:drawableTop="@drawable/markerto_btn"
                    android:text="@string/position" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnOrder"
                    android:layout_width="0dp"
                    android:textColor="@drawable/text_drawable"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:alpha="0.8"
                    android:background="@drawable/button_drawable"
                    android:drawableTop="@drawable/manager_btn"
                    android:text="@string/order" />

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@drawable/text_drawable"
                    android:alpha="0.8"
                    android:background="@drawable/button_drawable"
                    android:drawableTop="@drawable/statistic_btn"
                    android:text="@string/update" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnReport"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:alpha="0.8"
                    android:textColor="@drawable/text_drawable"
                    android:background="@drawable/button_drawable"
                    android:drawableTop="@drawable/notice_btn"
                    android:text="@string/notify" />

                <Button
                    android:id="@+id/btnSetting"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:alpha="0.8"
                    android:textColor="@drawable/text_drawable"
                    android:background="@drawable/button_drawable"
                    android:drawableTop="@drawable/setup_btn"
                    android:text="@string/setting" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>