<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear_change_pass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:visibility="gone"
    android:paddingRight="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorBlue"
        android:orientation="vertical"
        android:weightSum="2">
        <View
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_height="2dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">
            <View
                android:layout_width="1dp"
                android:background="@android:color/white"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/username"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
            <View
                android:layout_width="1dp"
                android:background="@android:color/white"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="@color/colorYellow"
                android:textStyle="italic" />
            <View
                android:layout_width="1dp"
                android:background="@android:color/white"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_height="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">
            <View
                android:layout_width="1dp"
                android:background="@android:color/white"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/full_name"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
            <View
                android:layout_width="1dp"
                android:background="@android:color/white"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/txtFullName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="@color/colorYellow"
                android:textStyle="italic" />
            <View
                android:layout_width="1dp"
                android:background="@android:color/white"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_height="2dp" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_password_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password_old"
            android:singleLine="true"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_password_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password_new"
            android:inputType="textPassword"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password_new_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_password_new_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password_new_again"
            android:inputType="textPassword"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_changepass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:text="@string/change_pass"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:text="@string/log_out"
        android:textColor="@android:color/white" />
</LinearLayout>