<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rela_layout_checkout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/centerbg"
    android:visibility="gone"
    tools:context="info.androidhive.materialtabs.fragments.OneFragment">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical|center_horizontal"
        android:text="GHI NHẬN VÀO"
        android:textColor="@color/colorBlue"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textTitle"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:alpha="0.8"
                android:textColor="@drawable/text_drawable"
                android:background="@drawable/button_drawable"
                android:drawableTop="@drawable/getlocation_btn"
                android:paddingTop="5dp"
                android:text="@string/get_location" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:alpha="0.8"
                android:textColor="@drawable/text_drawable"
                android:background="@drawable/button_drawable"
                android:drawableTop="@drawable/camera_btn"
                android:paddingTop="5dp"
                android:text="@string/take_picture" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:gravity="center"
                android:text="@string/check_out"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:textColor="@drawable/text_drawable"
                android:background="@drawable/button_drawable"
                android:drawableTop="@drawable/v_btn"
                android:paddingTop="5dp"
                android:text="@string/save_send" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>